remove whitespace in css. add exception handle for firefox console. fix a html error in template.
Bug: 725661
Change-Id: I04fe17ae9ff7781f748eff91454d0586aba34307

--- a/Server/bkr/server/static/css/layout-uncompressed.css
+++ b/Server/bkr/server/static/css/layout-uncompressed.css
@@ -531,8 +531,7 @@ msg, div.msg {
 msg.success, div.msg.success {
   background:#00FF00; 
   font-weight:normal;
-  padding: 1 1 1 1;
-   
+  padding: 1px;
 }
 
 msg.warn, div.msg.warn {
