bootstrap-ify group page
Change-Id: I0c8c6caa86db851d6793cfa2dcb262de35a48925

--- a/Server/assets/style.less
+++ b/Server/assets/style.less
@@ -33,6 +33,12 @@ h3 small { font-size: @baseFontSize * 1.25; }
 // ruins the row height.
 td form { margin: 0; }
 
+// By default, table cells are top-aligned. If every cell in a row has only one 
+// (notional) line, it makes more sense to middle-align them.
+.table-one-line-per-row td {
+    vertical-align: middle;
+}
+
 // elements from master.kid
 .container {
     padding-top: 20px;
