bootstrap-ify job-related pages
Change-Id: I31136fa7e731dbb3cba0c9accea5aaab9eb0af86

--- a/Server/assets/style.less
+++ b/Server/assets/style.less
@@ -78,6 +78,20 @@ td form, td input, td select {
 .statusRunning { color: @blueDark; }
 .statusDirty { font-style: italic; }
 
+// recipes and recipe sets on job page
+.recipeset {
+    border: 2px solid @tableBorder;
+    padding: 1em;
+    margin: 1em 0;
+}
+.recipe table {
+    margin-top: 2em;
+    margin-bottom: 0;
+}
+.recipe table th {
+    text-align: right;
+}
+
 // elements from master.kid
 .container {
     padding-top: 20px;
