access policies: user interface
Change-Id: Ic2ae462ef4af5112d21d9754da150680470dea90

--- a/Server/assets/style.less
+++ b/Server/assets/style.less
@@ -71,6 +71,14 @@ td form, td input, td select {
     margin-bottom: 0;
 }
 
+// dirty rows in editable tables
+.table > tbody > tr.dirty {
+    & > td, & > th {
+        background-color: @warningBackground;
+        font-style: italic;
+    }
+}
+
 // colour-coded status and result in jobs/recipes grid
 .statusCompleted, .resultPass { color: @green; }
 .statusAborted, .resultFail { color: @red; }
