hide superfluous navbar items in narrow viewports
This keeps the navbar at a single line down to widths of about 850px.
Below that it will wrap sensibly to two lines.

Bug: 670438
Change-Id: I2dc8a1b5d59ac5628caed6c502f2643eea907d45

--- a/Server/assets/style.less
+++ b/Server/assets/style.less
@@ -138,6 +138,16 @@ footer {
     .muted;
     text-align: right;
 }
+@media (max-width: 1200px) {
+    .navbar .navbar-wide-viewport-only {
+        display: none;
+    }
+}
+@media (max-width: 1024px) {
+    .navbar .brand {
+        display: none;
+    }
+}
 
 // typeaheads
 .tt-dropdown-menu {
