zebra striping for recipe tasks
Bug: 1012197
Change-Id: If7d45a64bb80d3169a6e73c00ef88d4ca3ff2a51

--- a/Server/assets/style.less
+++ b/Server/assets/style.less
@@ -103,6 +103,24 @@ table.recipe {
     margin-bottom: 0;
 }
 
+// recipe tasks on job and recipe pages (and elsewhere)
+table.tasks {
+    & > tbody {
+        border-top: 2px solid @tableBorder;
+    }
+    & > tbody:nth-child(odd) > tr {
+        & > td, & > th {
+            background-color: @tableBackgroundAccent;
+        }
+    }
+    // need to repeat hover style here to override the striping
+    & > tbody > tr:hover {
+        & > td, & > th {
+            background-color: @tableBackgroundHover;
+        }
+    }
+}
+
 // elements from master.kid
 .container {
     padding-top: 20px;
