fix recipe demarcation on the job page
Removed all the horizontal border noise in the job and recipe tables,
and added a horizontal separator between recipes in a recipe set to
demarcate them more clearly.

Also replaced the "Show Results" pill nav with a button group toggle,
which is slightly more consistent with the rest of the controls on the
page (and with the previous version), and helps demarcate recipes too.

Bug: 1012201
Change-Id: I3e99c969a82ebbffbf0ba3c7c5c3ad7833f2afb4

--- a/Server/assets/style.less
+++ b/Server/assets/style.less
@@ -60,7 +60,7 @@ td form, td input, td select {
 }
 
 // buttons in grid cells
-.table td .btn {
+.table td .btn, .table th .btn {
     white-space: nowrap;
     padding: @paddingSmall;
 }
@@ -89,17 +89,26 @@ td form, td input, td select {
 
 // jobs, recipe sets, and recipes on job page and recipe page
 table.job, table.recipe {
-    & > tbody > tr > th {
-        text-align: right;
+    & > tbody > tr {
+        & > th {
+            text-align: right;
+        }
+        & > th, & > td {
+            border: none;
+        }
     }
 }
-.recipeset {
+div.recipeset {
     border: 2px solid @tableBorder;
     padding: 1em;
     margin: 1em 0;
 }
+div.recipe {
+    margin-top: 1em;
+    border-top: 2px solid @tableBorder;
+    padding-top: 1em;
+}
 table.recipe {
-    margin-top: 2em;
     margin-bottom: 0;
 }
 
