widen Reserve Workflow selects
Bug: 1012828
Change-Id: Ib3e3e42f00b243c2fbc2e27600d8af021b803175

--- a/Server/assets/style.less
+++ b/Server/assets/style.less
@@ -147,3 +147,13 @@ footer {
     .muted;
     margin-left: 0.5em;
 }
+
+// reserve workflow
+.reserveworkflow {
+    input, select {
+        .input-xlarge;
+    }
+    select#form_distro_tree_id {
+        .input-xxlarge;
+    }
+}
