Fix to properly display job matrix in bootstrap.
Also a couple of other minor tweaks to the CSS.

Bug: 1015085
Change-Id: Id6a09114ae6d0eab222c83d3cb3cfb7ab532f4e9

--- a/Server/assets/style.less
+++ b/Server/assets/style.less
@@ -2,6 +2,8 @@
 @import "bootstrap/less/responsive.less";
 @import "font-awesome/less/font-awesome.less";
 @import "typeahead.js-bootstrap.less";
+@import "job-matrix.less";
+@import "datatables-bootstrap.less";
 
 // overrides for Bootstrap variables
 @sansFontFamily:  "Liberation Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -79,6 +81,17 @@ td form, td input, td select {
         font-style: italic;
     }
 }
+
+@resultPassColor: @green;
+@resultFailColor: @red;
+@resultWarnColor: @orange;
+@resultNewColor: @blue;
+@resultPanicColor: @black;
+
+// XXX The above colours are used in the job matrix and are carried over
+// from our pre Bootstrap styling.
+// We  should probably resolve the above colours with the below at some
+// point.
 
 // colour-coded status and result in jobs/recipes grid
 .statusCompleted, .resultPass { color: @green; }
