truncate log filenames with an ellipsis at the end using CSS
... rather than only showing the last 50 characters, which are less
likely to be the distinctive part of a long log filename.

The choice of 20em for max-width is largely arbitrary, we need to set
some max-width for the overflow to be enforced (otherwise it just pushes
out the table width).

Bug: 600232
Change-Id: Ib9d6460e5cc16d71d045624f1646acdf5f0b2186

--- a/Server/assets/style.less
+++ b/Server/assets/style.less
@@ -128,6 +128,15 @@ table.tasks {
             background-color: @tableBackgroundHover;
         }
     }
+    td.logs ul {
+        margin: 0;
+    }
+    td.logs li {
+        max-width: 18em;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+    }
 }
 
 // elements from master.kid
