use a "fluid" container (100% width) in master.kid
This is a very poor workaround for the fact that many parts of Beaker's
existing web UI assume a wide viewport and have display issues when
constrained to 1170px or narrower.

Change-Id: Ib30239c4eb10ff242df7d758c895394bd4b436d1

--- a/Server/assets/style.less
+++ b/Server/assets/style.less
@@ -131,8 +131,8 @@ table.tasks {
 }
 
 // elements from master.kid
-.container {
-    padding-top: 20px;
+.motd, .flash {
+    margin-top: 20px;
 }
 footer {
     .muted;
