--- a/Server/assets/style.less
+++ b/Server/assets/style.less
@@ -108,6 +108,11 @@ div.recipe {
     border-top: 2px solid @tableBorder;
     padding-top: 1em;
 }
+div.recipe .tab-content {
+    // if the results table overflows we want the viewport to scroll, not the tab pane
+    // https://bugzilla.redhat.com/show_bug.cgi?id=1014962
+    overflow: visible !important;
+}
 table.recipe {
     margin-bottom: 0;
 }
@@ -120,6 +125,15 @@ table.tasks {
     & > tbody:nth-child(odd) > tr {
         & > td, & > th {
             background-color: @tableBackgroundAccent;
+        }
+    }
+    // need to set even tbodies to white instead of leaving them transparent so
+    // that they occlude the recipe set border underneath them, in case the
+    // results table overflows
+    // https://bugzilla.redhat.com/show_bug.cgi?id=1014962
+    & > tbody:nth-child(even) > tr {
+        & > td, & > th {
+            background-color: #ffffff;
         }
     }
     // need to repeat hover style here to override the striping
