--- a/Server/assets/system.less
+++ b/Server/assets/system.less
@@ -26,3 +26,15 @@
     // reset bottom margin to match p
     margin-bottom: @baseLineHeight / 2;
 }
+
+.system-notify-cc {
+    li {
+        list-style: none;
+        margin: 0.75em 0;
+    }
+    a.cc-remove {
+        color: @gray;
+        text-decoration: none;
+        font-size: 1.25em;
+    }
+}
