loan tab on system page
This replaces the Loaned To field in the system form, as well as the
loan settings modal which lived inside of it.

Change-Id: I8d225c7287ffc0ed2177a7980b29e4ecdd865035

--- a/Server/assets/system.less
+++ b/Server/assets/system.less
@@ -20,7 +20,7 @@
     }
 }
 
-.system-status-reason {
+.system-status-reason, .system-loan-comment {
     .well;
     .well-small;
     // reset bottom margin to match p
