--- a/Server/assets/style.less
+++ b/Server/assets/style.less
@@ -1,5 +1,58 @@
-@import "bootstrap/less/bootstrap.less";
-@import "bootstrap/less/responsive.less";
+// These are all the LESS files making up Bootstrap, in the order they are 
+// defined in boostrap.less and responsive.less. Unneeded bits are commented out 
+// as an optimisation.
+@import "bootstrap/less/variables.less";
+@import "bootstrap/less/mixins.less";
+// CSS Reset
+@import "bootstrap/less/reset.less";
+// Grid system and page structure
+@import "bootstrap/less/scaffolding.less";
+@import "bootstrap/less/grid.less";
+@import "bootstrap/less/layouts.less";
+// Base CSS
+@import "bootstrap/less/type.less";
+@import "bootstrap/less/code.less";
+@import "bootstrap/less/forms.less";
+@import "bootstrap/less/tables.less";
+// Components: common
+//@import "bootstrap/less/sprites.less";
+@import "bootstrap/less/dropdowns.less";
+@import "bootstrap/less/wells.less";
+@import "bootstrap/less/component-animations.less";
+@import "bootstrap/less/close.less";
+// Components: Buttons & Alerts
+@import "bootstrap/less/buttons.less";
+@import "bootstrap/less/button-groups.less";
+@import "bootstrap/less/alerts.less"; // Note: alerts share common CSS with buttons and thus have styles in buttons.less
+// Components: Nav
+@import "bootstrap/less/navs.less";
+@import "bootstrap/less/navbar.less";
+//@import "bootstrap/less/breadcrumbs.less";
+@import "bootstrap/less/pagination.less";
+//@import "bootstrap/less/pager.less";
+// Components: Popovers
+@import "bootstrap/less/modals.less";
+//@import "bootstrap/less/tooltip.less";
+//@import "bootstrap/less/popovers.less";
+// Components: Misc
+//@import "bootstrap/less/thumbnails.less";
+@import "bootstrap/less/media.less";
+@import "bootstrap/less/labels-badges.less";
+@import "bootstrap/less/progress-bars.less";
+//@import "bootstrap/less/accordion.less";
+//@import "bootstrap/less/carousel.less";
+//@import "bootstrap/less/hero-unit.less";
+// Utility classes
+@import "bootstrap/less/utilities.less"; // Has to be last to override when necessary
+// Responsive classes
+@import "bootstrap/less/responsive-utilities.less";
+// Media queries
+@import "bootstrap/less/responsive-1200px-min.less";
+@import "bootstrap/less/responsive-768px-979px.less";
+@import "bootstrap/less/responsive-767px-max.less";
+// Responsive navbar
+@import "bootstrap/less/responsive-navbar.less";
+
 @import "font-awesome/less/font-awesome.less";
 @import "typeahead.js-bootstrap.less";
 @import "datatables-bootstrap.less";
