--- a/Server/assets/style.less
+++ b/Server/assets/style.less
@@ -184,6 +184,11 @@ td form, td input, td select {
     margin-left: 0.5em;
 }
 
+// "Growl-like" notifications
+.alert.bootstrap-growl {
+    box-shadow: 0px 2px 14px rgba(50, 50, 50, 0.5);
+}
+
 @import "master.less";
 @import "system.less";
 @import "job.less";
