ported system commands tab to Backbone
Change-Id: I7a56a3a685431f917073b4498fc83bff5391be9e

--- a/Server/assets/style.less
+++ b/Server/assets/style.less
@@ -136,6 +136,12 @@ td form, td input, td select {
     padding-top: 5px; // corresponds to .control-label
 }
 
+// Text inside btn-toolbars
+// Use <span class="btn-group btn-group-text">Some text</span>
+.btn-group-text {
+    font-size: @baseFontSize;
+}
+
 // buttons in grid cells
 .table td .btn, .table th .btn {
     white-space: nowrap;
