reduce spacing in read-only view of system form
Buttons which live inside the system form are reduced to btn-mini which
is as small as Bootstrap allows. Read-only values are shown as plain
text instead of uneditable inputs. Also muted the label colour to avoid
the wall-of-text feeling now that everything is just unadorned text.

Bug: 1052043
Change-Id: Id5144b1e845e86974f6999cc934a9b94f8be7326

--- a/Server/assets/style.less
+++ b/Server/assets/style.less
@@ -54,9 +54,11 @@ td form, td input, td select {
     }
 }
 
-// Use <div class="controls text-controls" /> if you have only 
-// regular text, not form controls.
-.text-controls {
+// Use <span class="form-control-static"> instead of an <input/>, if you just 
+// have a static value.
+// This is in Bootstrap 3.
+.form-control-static {
+    display: inline-block;
     padding-top: 5px; // corresponds to .control-label
 }
 
@@ -113,3 +115,4 @@ td form, td input, td select {
 @import "recipe-tasks.less";
 @import "reserve-workflow.less";
 @import "job-matrix.less";
+@import "system.less";
