--- a/Server/assets/job-matrix.less
+++ b/Server/assets/job-matrix.less
@@ -1,4 +1,4 @@
-#matrix-report {
+.job-matrix {
     .task-header {
         text-align: left;
         padding-left:25px;
@@ -7,6 +7,10 @@
         min-width: 200px;
     }
 
+    .whiteboard-selector {
+        float: left;
+        margin-right: 1em;
+    }
     .whiteboard {
         width:600px;
     }
@@ -21,6 +25,9 @@
     .matrix-whiteboard {
         padding:5px 5px 5px 5px;
         min-width:95px;
+    }
+    #nacks {
+        margin: 1em 0;
     }
 
 
