--- a/Server/assets/style.less
+++ b/Server/assets/style.less
@@ -39,7 +39,7 @@ h3 small { font-size: @baseFontSize * 1.25; }
 
 // We have some forms in table cells, and the bottom margin (from Bootstrap) 
 // ruins the row height.
-td form, td input, td select {
+td form, td input, td select, td .input-append, td .input-prepend {
     margin-bottom: 0 !important;
 }
 
@@ -69,7 +69,7 @@ td form, td input, td select {
 }
 
 // buttons in grid cells
-.table td .btn, .table th .btn {
+.table .btn {
     white-space: nowrap;
     padding: @paddingSmall;
 }
@@ -114,6 +114,13 @@ td form, td input, td select {
 .tt-suggestion small {
     .muted;
     margin-left: 0.5em;
+}
+input.tt-hint {
+    .muted;
+}
+// https://github.com/twitter/typeahead.js/issues/88
+.input-append .tt-suggestion, .input-prepend .tt-suggestion {
+    font-size: @baseFontSize;
 }
 
 @import "master.less";
