include completed tasks with no result in progress bars
Beah does not allow a task to complete with no result, but the harness
API permits it for alternative harnesses. Currently a completed task
with no result does not count towards the progress bar at all, which is
just wrong.

Bug: 1072192
Change-Id: I084c9ba0ba22dc37bff5637588068a1629afb9ee

--- a/Server/assets/style.less
+++ b/Server/assets/style.less
@@ -81,6 +81,12 @@ td form, td input, td select, td .input-append, td .input-prepend {
     margin-bottom: 0;
 }
 
+// "default" segment for progress bars (the actual default is blue, this is 
+// "default" as in grey to match the default label colour)
+.progress-default .bar, .progress .bar-default {
+  #gradient > .vertical(lighten(@gray, 15%), @gray);
+}
+
 // dirty rows in editable tables
 .table > tbody > tr.dirty {
     & > td, & > th {
