move help links to a new navbar dropdown; simplify footer
Bug: 1012224
Change-Id: Ic8617dc1d2f782bc1176d693b12461e8a0c2055e

--- a/Server/assets/master.less
+++ b/Server/assets/master.less
@@ -9,8 +9,14 @@
     margin-top: 20px;
 }
 footer {
+    padding-top: (@baseLineHeight / 2);
+    margin: @baseLineHeight @gridGutterWidth 0 @gridGutterWidth;
+    border-top: 1px solid @grayLighter;
     .muted;
-    text-align: right;
+    a {
+        .muted;
+        font-weight: bold;
+    }
 }
 @media (max-width: 1200px) {
     .navbar .navbar-wide-viewport-only {
