--- a/Server/assets/style.less
+++ b/Server/assets/style.less
@@ -135,3 +135,8 @@ input.tt-hint {
 @import "reserve-workflow.less";
 @import "job-matrix.less";
 @import "system.less";
+
+// Site-specific styles. The beaker-server package creates site.less as 
+// a symlink to /dev/null if it doesn't exist. Admins can overwrite the symlink 
+// to point at their own custom LESS instead.
+@import "site.less";
