filter for Backgrids
Supports a subset of Lucene query parser syntax, which is also used by
Solr and Elasticsearch in case we ever upgrade to those for real.

The search syntax currently supports everything that the traditional
grid searchbar supports, but currently there is no "advanced search" UI
for building queries.

Bug: 1014438
Change-Id: Ib34aaff866702c04b188bdabacc8cc52e7135dc4

--- a/Server/assets/backgrid.less
+++ b/Server/assets/backgrid.less
@@ -61,3 +61,19 @@
 .backgrid-initial-loading-indicator {
     text-align: center;
 }
+
+.grid-filter {
+    float: left;
+    input.search-query {
+        width: 20em;
+        padding-left: 2*@baseFontSize;
+    }
+    &:before {
+        content: @search;
+        font-family: "FontAwesome";
+        opacity: 0.6;
+        position: absolute;
+        height: @baseLineHeight;
+        padding: 4px 10px; // matches default for <input/>
+    }
+}
