query builder UI for Backgrid filters
Change-Id: I2baf77a4914ae82e6393739cbbf61ac42b93270b

--- a/Server/assets/backgrid.less
+++ b/Server/assets/backgrid.less
@@ -72,6 +72,7 @@
         content: @search;
         font-family: "FontAwesome";
         opacity: 0.6;
+        z-index: 200; // input-append uses z-index hackery
         position: absolute;
         height: @baseLineHeight;
         padding: 4px 10px; // matches default for <input/>
