--- a/Server/assets/style.less
+++ b/Server/assets/style.less
@@ -243,6 +243,7 @@ input.tt-hint {
 @import "job.less";
 @import "recipe-tasks.less";
 @import "job-matrix.less";
+@import "query-builder.less";
 
 // Site-specific styles. The beaker-server package creates site.less as 
 // a symlink to /dev/null if it doesn't exist. Admins can overwrite the symlink 
