--- a/Server/assets/style.less
+++ b/Server/assets/style.less
@@ -61,6 +61,7 @@
 
 @import "font-awesome/less/font-awesome.less";
 @import "typeahead.js-bootstrap.less";
+@import "bootstrap-datepicker/less/datepicker.less";
 @import (less) "bootstrap-select/bootstrap-select.css";
 @import "datatables-bootstrap.less";
 @import "backgrid.less";
