--- a/Server/assets/backgrid.less
+++ b/Server/assets/backgrid.less
@@ -43,4 +43,21 @@
         overflow: hidden;
         text-overflow: ellipsis;
     }
+
+    // Loading overlay showing a spinner
+    .loading-overlay {
+        position: absolute;
+        background-color: rgba(255, 255, 255, 0.7);
+        z-index: 100;
+        display: table;
+        p {
+            text-align: center;
+            vertical-align: middle;
+            display: table-cell;
+        }
+    }
+}
+
+.backgrid-initial-loading-indicator {
+    text-align: center;
 }
