--- a/Server/assets/style.less
+++ b/Server/assets/style.less
@@ -79,7 +79,7 @@
 //@baseLineHeight:        3ex;
 
 // overrides for FontAwesome variables
-@FontAwesomePath: "font-awesome/font";
+@fa-font-path: "font-awesome/fonts";
 
 // workaround for https://github.com/twitter/typeahead.js/issues/147
 .modal-body {
