fix tofu for FontAwesome icons in Backgrids
This was a mistake in commit 8d5ae86c (upgrade to FontAwesome 4.2.1).
The .fa-icon() class is needed so that we have the right font-family and
other properties set. I never noticed the problem because I had
FontAwesome installed systemwide and so my browser was finding the
glyphs there.

Change-Id: I02ab234c8c6db6a0ca3bdc3605dd91b8f9f313da

--- a/Server/assets/backgrid.less
+++ b/Server/assets/backgrid.less
@@ -16,14 +16,17 @@
     th.sortable:after {
         margin-left: 0.3em;
         text-decoration: none;
+        .fa-icon();
         content: @fa-var-sort;
         color: @grayLighter;
     }
     th.sortable.ascending:after {
+        .fa-icon();
         content: @fa-var-sort-asc;
         color: @textColor;
     }
     th.sortable.descending:after {
+        .fa-icon();
         content: @fa-var-sort-desc;
         color: @textColor;
     }
@@ -70,7 +73,8 @@
     }
     &:before {
         content: @fa-var-search;
-        font-family: "FontAwesome";
+        .fa-icon();
+        line-height: inherit !important;
         opacity: 0.6;
         z-index: 200; // input-append uses z-index hackery
         position: absolute;
